// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Phase 29 Tranche 7c — narrative snapshot stability > English preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "vəː gɪŋ hɪz vəː wʊdh",
    },
    {
      "english": "the dogs see the wolves",
      "target": "vəː bʌːg hɪ vəː wʊdh",
    },
    {
      "english": "i give you the bread",
      "target": "æw gɪv wu",
    },
    {
      "english": "the king walks at the river",
      "target": "vəː gɪŋ wʌːgz æt vəː rɪvəːr",
    },
    {
      "english": "the king does not see the wolf",
      "target": "vəː gɪŋ bæt hɪz vəː wʊdh",
    },
  ],
  "preset": "english",
}
`;

exports[`Phase 29 Tranche 7c — narrative snapshot stability > Romance preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "deːgeː feːdeːdeːh lupʼuum",
    },
    {
      "english": "the dogs see the wolves",
      "target": "kaːneːi feːdeːdeːnθ lupʼuium",
    },
    {
      "english": "i give you the bread",
      "target": "eːgoː daːdeːo huum",
    },
    {
      "english": "the king walks at the river",
      "target": "deːgeː aːbbulaːdeːh lubeː",
    },
    {
      "english": "the king does not see the wolf",
      "target": "deːgeː noːn feːdeːdeːh lupʼuum",
    },
  ],
  "preset": "romance",
}
`;

exports[`Phase 29 Tranche 7c — narrative snapshot stability > Toki Pona preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "sewiː nuːpiːn soːweniː",
    },
    {
      "english": "the dogs see the wolves",
      "target": "soːweniː nuːpiːn soːweniː",
    },
    {
      "english": "i give you the bread",
      "target": "miː paːnaː hinɛ",
    },
    {
      "english": "the king walks at the river",
      "target": "sewiː paːwaː sɛhi penoː",
    },
    {
      "english": "the king does not see the wolf",
      "target": "sewiː aːnaː nuːpiːn soːweniː",
    },
  ],
  "preset": "tokipona",
}
`;
